@@ -23,6 +23,6 @@ $fckg_lang['btn_exit_draft'] = "Exit Draft";
 $fckg_lang['title_draft'] = "View, Show, Edit Draft";
 $fckg_lang['title_exit_draft'] = "Return to current document";
 $fckg_lang['draft_msg']= "This document has a draft file. The draft button toggles between the this document and the draft. You can edit and save either of the two." ;
-
+$fckg_lang['whats_this'] = "what's this?";
 
 
